Bug 74139 - "consolidate the contents of r600_resource.c" breaks opencl on aruba
Summary: "consolidate the contents of r600_resource.c" breaks opencl on aruba
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-28 07:20 UTC by slicksam
Modified: 2014-01-28 15:26 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description slicksam 2014-01-28 07:20:40 UTC
a9ae7635b77fc4fd9f4614fead63fefa6ff74f4e is the first bad commit
commit a9ae7635b77fc4fd9f4614fead63fefa6ff74f4e
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Wed Jan 22 00:58:12 2014 +0100

    r600g,radeonsi: consolidate the contents of r600_resource.c
    
    Reviewed-by: Michel Dänzer <michel.daenzer@amd.com>
    Reviewed-by: Tom Stellard <thomas.stellard@amd.com>


Tested using hello_world from opencl-example

Sorry, it was suggested that I supply a backtrace, I don't have time right now but if this is still needed I can try to figure it out later.  dmesg says it's crashing in pipe_r600.so if this helps any.
Comment 1 Tom Stellard 2014-01-28 15:02:22 UTC
Should be fixed by: http://lists.freedesktop.org/archives/mesa-dev/2014-January/052691.html
Comment 2 Bruno Jiménez 2014-01-28 15:22:46 UTC
Hi,

That patch fixes the problem for me.
Comment 3 Tom Stellard 2014-01-28 15:26:11 UTC
Fixed by commit 7b4592a489a4473bc886ceea11470231e7a98b0f


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.